<resources>
    <string name="app_name">屏连·副屏</string>
    <string name="accessibility_service_description">用于在副屏上模拟触摸事件的无障碍服务</string>
    <string name="go_dark_button">切换暗色模式</string>
    <string name="back_button">返回按钮</string>
    <string name="home_button">主页按钮</string>
    <string name="scd_single_app">单应用副屏</string>
    <string name="scd_fullscreen">全屏投屏</string>
    <string name="scd_display_settings">显示设置</string>
    <string name="scd_displays">屏幕列表</string>
    <string name="scd_displaylink">DisplayLink</string>
    <string name="scd_wireless">无线投屏</string>
    <string name="scd_touchpad">触控板</string>
    <string name="scd_settings">设置</string>
    <string name="scd_about">关于</string>
    <string name="scd_app_icon">应用图标</string>
</resources>
